:bug: Fix scrolling on mobile

--- a/app/styles/entries.css
+++ b/app/styles/entries.css
@@ -1,6 +1,6 @@
 .entries-layout {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto 1fr auto;
